--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
 	<ul id="projects">
 		<a href="https://chrome.google.com/webstore/detail/tabmaster/pojgemmobcnjmnpodjmgeofdgojpkepn">
 		<li id="tbmstr">
-			<div id="h">
+			<div class="h">
 				Tabmaster
 			</div>
-			<div id="sub">
+			<div class="sub">
 				Tame your tabs.
 			</div>
 			<img id="tmbtn" src="tmbtn.png" width="80px" height="80px">
 			<img id="tm" src="tm.png" width="80px" height="80px">
+		</li>
+		</a>
+		<a href="/Steam-Emoticon-Art-Editor/">
+		<li id="seae">
+			<div class="h">
+				seae
+			</div>
+			<div class="sub">
+				The steam emoticon art editor.
+			</div>
+			<img id="balloon" src="http://cdn.steamcommunity.com/economy/emoticon/balloon" width="65px" height="65px">
 		</li>
 		</a>
 	</ul>
