--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<ul id="social">
 		<a href="https://twitter.com/a9_io"><li id="twtr">Twitter</li></a>
 		<a href="https://github.com/a9io"><li id="gthb">Github</li></a>
+		<a href="http://www.last.fm/user/a9_io"><li id="lsfm">Github</li></a>
 	</ul>
 	<ul id="projects">
 		<a href="https://chrome.google.com/webstore/detail/tabmaster/pojgemmobcnjmnpodjmgeofdgojpkepn">
@@ -35,7 +36,13 @@
 		</li>
 		</a>
 	</ul>
+	<div class="bot">
+	<div id="jam">
+    	<script src="http://www.thisismyjam.com/includes/js/medallion.js"></script>
+<script>Jam.Medallion.insert({"username":"a9","image":false});</script>
+    </div>
 	<div id="d"><span style="color: #CABA09; font-weight: bold">&#208;: </span>DAfuujjA14D3TUZwVamviRdnNNBpj4cVWy</div>
+	</div>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
