--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 	<h1>Max Krieger</h1>
 	<ul id="social">
-		<a href="https://twitter.com/a9_io"><li id="twtr">Twitter</li></a>
-		<a href="https://github.com/a9io"><li id="gthb">Github</li></a>
-		<a href="http://www.last.fm/user/a9_io"><li id="lsfm">Github</li></a>
+		<a href="https://twitter.com/a9_io"><li id="twtr">twitter</li></a>
+		<a href="https://github.com/a9io"><li id="gthb">github</li></a>
+		<a href="http://www.last.fm/user/a9_io"><li id="lsfm">last.fm</li></a>
 	</ul>
 	<ul id="projects">
 		<a href="https://chrome.google.com/webstore/detail/tabmaster/pojgemmobcnjmnpodjmgeofdgojpkepn">
