--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Max Krieger</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
+  <meta name=viewport content='width=400'>
 </head>
 <body>
 	<h1>Max Krieger</h1>
