--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Max Krieger</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
   <meta name=viewport content='width=550'>
+	<meta name="theme-color" content="#0d0f38">
+	<link rel="icon" sizes="256x256" href="highres.png">
 </head>
 <body>
 	<h1>Max Krieger</h1>
