added polybot, updated images, added/removed nice shadows

--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
 					<div class="sub">
 						The steam emoticon art editor.
 					</div>
-					<img id="balloon" src="http://cdn.steamcommunity.com/economy/emoticon/balloon" width="65px" height="65px">
+					<img id="balloon" src="balloon.png" width="80px">
+				</li>
+			</a>
+			<a href="https://github.com/a9io/polybot">
+				<li id="polybot">
+					<div class="h">
+						polybot
+					</div>
+					<div class="sub">
+						A modular bot for google hangouts.
+					</div>
+					<img id="polyhex" src="polyhex.png" width="100px">
 				</li>
 			</a>
 		</ul>
