--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Max Krieger</title>
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
-		<meta name=viewport content='width=550'>
+		<meta name=viewport content='width=700'>
 		<meta name="theme-color" content="#0d0f38">
 		<link rel="icon" sizes="256x256" href="highres.png">
 	</head>
@@ -34,6 +34,17 @@
 					</div>
 					<img id="tmbtn" src="tmbtn.png" width="80px" height="80px">
 					<img id="tm" src="tm.png" width="80px" height="80px">
+				</li>
+			</a>
+			<a href="/alienbox">
+				<li id="alienbox">
+					<div class="h">
+						alienbox
+					</div>
+					<div class="sub">
+						the open source reddit inbox notifier
+					</div>
+					<img id="boxicon" src="alienbox.png" width="75px">
 				</li>
 			</a>
 			<a href="/Steam-Emoticon-Art-Editor/">
