--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 			</a>
 		</ul>
 		<div class="bot">
+			<div id="bio">
+				I'm Max, a developer from Boston currently in high school.
+			</div>
 			<div id="jam">
 				<script src="http://www.thisismyjam.com/includes/js/medallion.js"></script>
 				<script>
