--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 			</a>
 		</ul>
 		<div class="bot">
-			<div id="bio">
+			<div class="su">
 				I'm Max, a developer from Boston currently in high school.
 			</div>
-			<div id="d">
+			<div id="d" class="su">
 				<span style="color: #CABA09; font-weight: bold">&#208;: </span>
 				<span id="address">DAfuujjA14D3TUZwVamviRdnNNBpj4cVWy</span>
 			</div>
