--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</li>
 			</a>
 		</ul>
-		<div class="bot">
+		<div id="bot">
 			<div class="su">
 				I'm Max, a developer from Boston currently in high school.
 			</div>
