--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<img id="boxicon" src="alienbox.png" width="75px">
 				</li>
 			</a>
-			<a href="https://github.com/a9io/polybot">
+			<!-- <a href="https://github.com/a9io/polybot">
 				<li id="polybot">
 					<div class="h">
 						polybot
@@ -57,7 +57,7 @@
 					</div>
 					<img id="polyhex" src="polyhex.png" width="100px">
 				</li>
-			</a>
+			</a> -->
 		</ul>
 		<div id="bot">
 			<div class="su">
