removed doge wallet for now

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 			<div class="su">
 				I'm Max, a developer from Boston currently in high school.
 			</div>
-			<div id="d" class="su">
+			<!--div id="d" class="su">
 				<span style="color: #CABA09; font-weight: bold">&#208;: </span>
 				<span id="address">DAfuujjA14D3TUZwVamviRdnNNBpj4cVWy</span>
-			</div>
+			</div>-->
 		</div>
 		<script>
 			//max's dogecoin address autoselector
