--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="https://twitter.com/a9_io">
 				<li id="twtr">twitter</li>
 			</a>
-			<a href="https://github.com/a9io">
+			<a href="https://github.com/maxkrieger">
 				<li id="gthb">github</li>
 			</a>
 			<a href="http://www.last.fm/user/a9_io">
