--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!--[if lt IE 9]>
   <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="container">
+  <div>
     <div class="header">
       <div class="row bottom-xs start-xs">
         <div class="col-xs-6 head">
@@ -27,17 +27,38 @@
           <ul class="social fa-2x"><a href="https://twitter.com/a9_io"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/in/max-k-10a62a106"><i class="fa fa-linkedin"></i></a><a href="https://medium.com/@a9"><i class="fa fa-medium"></i></a><a href="https://www.last.fm/user/a9_io"><i class="fa fa-lastfm"></i></a><a href="https://github.com/maxkrieger"><i class="fa fa-github"></i></a><a href="https://www.google.com/recaptcha/mailhide/d?k=01OQgZinQEdZ8NZXVTw0niRQ==&amp;c=aAHOFQgEVekfGiM4ENP0F1tGDqNTi4RZzNjnYcjE33U="><i class="fa fa-envelope"></i></a></ul>
         </div>
       </div>
+      <div class="tile">
+        <p>I'm a Designer & Developer in High School.</p>
+      </div>
+      <div>
+        <ul class="well row center-xs">
+          <li class="chip"><i class="fa fa-code"></i><span>Web Development</span></li>
+          <li class="chip"><i class="fa fa-pencil"></i><span>Design</span></li>
+          <li class="chip"><i class="fa fa-tablet"></i><span>UX</span></li>
+          <li class="chip"><i class="fa fa-book"></i><span>Linguistics</span></li>
+        </ul>
+      </div>
     </div>
-    <div class="tile">
-      <p>I'm a Designer & Developer in High School.</p>
-    </div>
-    <div>
-      <ul class="well row center-xs">
-        <li class="chip"><i class="fa fa-code"></i><span>Web Development</span></li>
-        <li class="chip"><i class="fa fa-pencil"></i><span>Design</span></li>
-        <li class="chip"><i class="fa fa-tablet"></i><span>UX</span></li>
-        <li class="chip"><i class="fa fa-book"></i><span>Linguistics</span></li>
-      </ul>
+    <div class="alienbox">
+      <h1 class="a"><a href="/alienbox">alienbox</a></h1>
+      <div class="row content">
+        <div class="col-xs-12 col-sm-6"><a href="/alienbox"><img src="images/alienbox.png" class="screenshot"></a></div>
+        <div class="col-xs-12 col-sm-6 center-xs start-sm">
+          <p class="box">Alienbox is an open source reddit inbox checker. It lives in the OS X menubar, notifies when new messages arrive, and gives small previews of them.</p>
+          <ul class="fa-ul">
+            <li><i class="fa-li fa fa-terminal"></i>
+              <p>Electron</p>
+            </li>
+            <li><i class="fa-li fa fa-code"></i>
+              <p>VueJS</p>
+            </li>
+            <li><i class="fa-li fa fa-wifi"></i>
+              <p>Reddit API</p>
+            </li>
+          </ul><a href="/alienbox">
+            <div class="go">Check it out!</div></a>
+        </div>
+      </div>
     </div>
   </div>
   <script src="./scripts/main.js"></script>
