--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="tile">
-        <p>I'm a Designer & Developer in High School. Here are some of the things I've worked on.</p>
+        <p>I'm a designer & developer in high school. Here are some of the things I've worked on.</p>
       </div>
       <div>
         <ul class="well row center-xs">
