--- a/index.html
+++ b/index.html
@@ -16,47 +16,70 @@
   <!--[if lt IE 9]>
   <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div>
-    <div class="header">
-      <div class="row bottom-xs start-xs">
-        <div class="col-xs-6 head">
-          <h1>Hello.</h1>
-          <h2>I'm Max Krieger</h2>
-        </div>
-        <div class="col-xs-12 col-lg-6 col-sm-6 col-md-6 center-sm end-md">
-          <ul class="social fa-2x"><a href="https://twitter.com/a9_io"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/in/max-k-10a62a106"><i class="fa fa-linkedin"></i></a><a href="https://medium.com/@a9"><i class="fa fa-medium"></i></a><a href="https://www.last.fm/user/a9_io"><i class="fa fa-lastfm"></i></a><a href="https://github.com/maxkrieger"><i class="fa fa-github"></i></a><a href="https://www.google.com/recaptcha/mailhide/d?k=01OQgZinQEdZ8NZXVTw0niRQ==&amp;c=aAHOFQgEVekfGiM4ENP0F1tGDqNTi4RZzNjnYcjE33U="><i class="fa fa-envelope"></i></a></ul>
-        </div>
+  <div class="header">
+    <div class="row bottom-xs start-xs">
+      <div class="col-xs-12 col-sm-6 head box">
+        <h1>Hello.</h1>
+        <h2>I'm Max Krieger</h2>
       </div>
-      <div class="tile">
-        <p>I'm a designer & developer in high school. Here are some of the things I've worked on.</p>
-      </div>
-      <div>
-        <ul class="well row center-xs">
-          <li class="chip"><i class="fa fa-code"></i><span>Web Development</span></li>
-          <li class="chip"><i class="fa fa-pencil"></i><span>Design</span></li>
-          <li class="chip"><i class="fa fa-tablet"></i><span>UX</span></li>
-          <li class="chip"><i class="fa fa-book"></i><span>Linguistics</span></li>
-        </ul>
+      <div class="col-xs-12 col-lg-6 col-sm-6 col-md-6 center-xs end-sm">
+        <ul class="social fa-2x box"><a href="https://twitter.com/a9_io"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/in/max-k-10a62a106"><i class="fa fa-linkedin"></i></a><a href="https://medium.com/@a9"><i class="fa fa-medium"></i></a><a href="https://www.last.fm/user/a9_io"><i class="fa fa-lastfm"></i></a><a href="https://github.com/maxkrieger"><i class="fa fa-github"></i></a><a href="https://www.google.com/recaptcha/mailhide/d?k=01OQgZinQEdZ8NZXVTw0niRQ==&amp;c=aAHOFQgEVekfGiM4ENP0F1tGDqNTi4RZzNjnYcjE33U="><i class="fa fa-envelope"></i></a></ul>
       </div>
     </div>
-    <div class="alienbox">
-      <h1 class="a"><a href="/alienbox">alienbox</a></h1>
-      <div class="row content">
-        <div class="col-xs-12 col-sm-6"><a href="/alienbox"><img src="images/alienbox.png" class="screenshot"></a></div>
-        <div class="col-xs-12 col-sm-6 center-xs start-sm">
-          <p class="box">Alienbox is an open source reddit inbox checker. It lives in the OS X menubar, notifies when new messages arrive, and gives small previews of them.</p>
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-terminal"></i>
-              <p>Electron</p>
-            </li>
-            <li><i class="fa-li fa fa-code"></i>
-              <p>VueJS</p>
-            </li>
-            <li><i class="fa-li fa fa-wifi"></i>
-              <p>Reddit API</p>
-            </li>
-          </ul><a href="/alienbox">
-            <div class="go">Check it out!</div></a>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-lg-6">
+      <div class="about">
+        <h1 class="p">About Me</h1>
+        <article>
+          <div>
+            <ul class="well row center-xs fa-ul">
+              <li><i class="fa fa-code"></i><span>Web Development</span></li>
+              <li class="chip"><i class="fa fa-pencil"></i><span>Design</span></li>
+              <li><i class="fa fa-tablet"></i><span>UX</span></li>
+              <li><i class="fa fa-book"></i><span>Linguistics</span></li>
+            </ul>
+          </div>
+          <p>I'm a designer & developer in high school from the Boston area who has a passion in human-computer interaction and automation. I develop small tools and larger projects in my free time.</p>
+        </article>
+      </div>
+    </div>
+    <div class="col-xs-12 col-lg-6">
+      <div class="projects">
+        <h1 class="p">Projects</h1>
+        <div class="project">
+          <div class="left"><a href="/alienbox"><img src="/images/alienbox.png" width="100"></a></div>
+          <div class="d">
+            <h1 class="a"><a href="/alienbox">alienbox</a></h1>
+            <p class="box">An open source reddit inbox checker. It lives in the OS X menubar, notifies when new messages arrive, and gives small previews of them.</p>
+          </div>
+          <div class="center-xs end-sm">
+            <ul>
+              <li><i class="fa fa-terminal"></i>
+                <p>Electron</p>
+              </li>
+              <li><i class="fa fa-code"></i>
+                <p>VueJS</p>
+              </li>
+              <li><i class="fa fa-wifi"></i>
+                <p>Reddit API</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="project">
+          <div class="left"><a href="https://chrome.google.com/webstore/detail/tabmaster/pojgemmobcnjmnpodjmgeofdgojpkepn"><img src="/images/tabmaster.png" width="75"></a></div>
+          <div class="d">
+            <h1 class="a"><a href="https://chrome.google.com/webstore/detail/tabmaster/pojgemmobcnjmnpodjmgeofdgojpkepn">Tabmaster</a></h1>
+            <p class="box">A Chrome browser extension which allows for easy tab management and stowage.</p>
+          </div>
+          <div class="center-xs end-sm">
+            <ul>
+              <li><i class="fa fa-chrome"></i>
+                <p>Chrome Extension</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
